// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionsMenu LC Amendment hides "Request LC Amendment" link  with LC status: ILetterOfCreditStatus.INITIALISING 1`] = `
<div
  aria-expanded={false}
  className="ui inline dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="listbox"
  tabIndex={0}
>
  <div
    aria-live="polite"
    className="text"
    role="alert"
  />
  <i
    aria-hidden="true"
    className="ellipsis horizontal icon"
    onClick={[Function]}
  />
  <div
    className="menu transition left"
  >
    <div
      className="item"
      onClick={[Function]}
      role="option"
    >
      <a
        className="link-as-text"
        href="/financial-instruments/letters-of-credit/08e9f8"
        onClick={[Function]}
      >
        View LC application
      </a>
    </div>
  </div>
</div>
`;

exports[`ActionsMenu LC Amendment hides "Request LC Amendment" link  with LC status: ILetterOfCreditStatus.ISSUED_LC_REJECTED 1`] = `
<div
  aria-expanded={false}
  className="ui inline dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="listbox"
  tabIndex={0}
>
  <div
    aria-live="polite"
    className="text"
    role="alert"
  />
  <i
    aria-hidden="true"
    className="ellipsis horizontal icon"
    onClick={[Function]}
  />
  <div
    className="menu transition left"
  >
    <div
      className="item"
      onClick={[Function]}
      role="option"
    >
      <a
        className="link-as-text"
        href="/financial-instruments/letters-of-credit/08e9f8"
        onClick={[Function]}
      >
        View LC application
      </a>
    </div>
  </div>
</div>
`;

exports[`ActionsMenu LC Amendment hides "Request LC Amendment" link  with LC status: ILetterOfCreditStatus.REQUEST_REJECTED 1`] = `
<div
  aria-expanded={false}
  className="ui inline dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="listbox"
  tabIndex={0}
>
  <div
    aria-live="polite"
    className="text"
    role="alert"
  />
  <i
    aria-hidden="true"
    className="ellipsis horizontal icon"
    onClick={[Function]}
  />
  <div
    className="menu transition left"
  >
    <div
      className="item"
      onClick={[Function]}
      role="option"
    >
      <a
        className="link-as-text"
        href="/financial-instruments/letters-of-credit/08e9f8"
        onClick={[Function]}
      >
        View LC application
      </a>
    </div>
  </div>
</div>
`;

exports[`ActionsMenu LC Amendment hides "Request LC Amendment" link  without role APPLICANT 1`] = `
<div
  aria-expanded={false}
  className="ui inline dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="listbox"
  tabIndex={0}
>
  <div
    aria-live="polite"
    className="text"
    role="alert"
  />
  <i
    aria-hidden="true"
    className="ellipsis horizontal icon"
    onClick={[Function]}
  />
  <div
    className="menu transition left"
  >
    <div
      className="item"
      onClick={[Function]}
      role="option"
    >
      <a
        className="link-as-text"
        href="/financial-instruments/letters-of-credit/08e9f8"
        onClick={[Function]}
      >
        View LC application
      </a>
    </div>
  </div>
</div>
`;

exports[`ActionsMenu LC Amendment shows link 1`] = `
<div
  aria-expanded={false}
  className="ui inline dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="listbox"
  tabIndex={0}
>
  <div
    aria-live="polite"
    className="text"
    role="alert"
  />
  <i
    aria-hidden="true"
    className="ellipsis horizontal icon"
    onClick={[Function]}
  />
  <div
    className="menu transition left"
  >
    <div
      className="item"
      onClick={[Function]}
      role="option"
    >
      <a
        className="link-as-text"
        href="/financial-instruments/letters-of-credit/08e9f8"
        onClick={[Function]}
      >
        View LC application
      </a>
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="option"
    >
      <a
        className="link-as-text"
        href="/financial-instruments/letters-of-credit/08e9f8/amendments/new"
        onClick={[Function]}
      >
        Request LC Amendment
      </a>
    </div>
  </div>
</div>
`;

exports[`ActionsMenu LC Amendment shows link with role APPLICANT 1`] = `
<div
  aria-expanded={false}
  className="ui inline dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="listbox"
  tabIndex={0}
>
  <div
    aria-live="polite"
    className="text"
    role="alert"
  />
  <i
    aria-hidden="true"
    className="ellipsis horizontal icon"
    onClick={[Function]}
  />
  <div
    className="menu transition left"
  >
    <div
      className="item"
      onClick={[Function]}
      role="option"
    >
      <a
        className="link-as-text"
        href="/financial-instruments/letters-of-credit/08e9f8"
        onClick={[Function]}
      >
        View LC application
      </a>
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="option"
    >
      <a
        className="link-as-text"
        href="/financial-instruments/letters-of-credit/08e9f8/amendments/new"
        onClick={[Function]}
      >
        Request LC Amendment
      </a>
    </div>
  </div>
</div>
`;

exports[`ActionsMenu renders everything 1`] = `
<div
  aria-expanded={false}
  className="ui inline dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="listbox"
  tabIndex={0}
>
  <div
    aria-live="polite"
    className="text"
    role="alert"
  />
  <i
    aria-hidden="true"
    className="ellipsis horizontal icon"
    onClick={[Function]}
  />
  <div
    className="menu transition left"
  >
    <div
      className="item"
      onClick={[Function]}
      role="option"
    >
      <a
        className="link-as-text"
        href="/financial-instruments/letters-of-credit/1234/amendments/new"
        onClick={[Function]}
      >
        Request LC Amendment
      </a>
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="option"
    >
      <a
        className="link-as-text"
        href="/financial-instruments/letters-of-credit/1234?taskId=123"
        onClick={[Function]}
      >
        Review LC application
      </a>
    </div>
  </div>
</div>
`;
